--- a/chat2/app/src/main/res/layout/activity_home.xml
+++ b/chat2/app/src/main/res/layout/activity_home.xml
@@ -24,15 +24,6 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <TextView
-            android:id="@+id/home_btn"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="홈"
-            android:gravity="center"
-            android:textSize="30dp"
-            android:background="@color/white"/>
-        <TextView
             android:id="@+id/chat_btn"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -61,6 +52,15 @@
             android:textSize="30dp"
             android:background="#BBED90"/>
 
+        <TextView
+            android:id="@+id/check_btn"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="검사"
+            android:gravity="center"
+            android:textSize="30dp"
+            android:background="@color/green"/>
 
 
 
