--- a/chat2/app/src/main/res/layout/activity_result.xml
+++ b/chat2/app/src/main/res/layout/activity_result.xml
@@ -30,6 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:textSize="20sp"
+        android:textAlignment="center"
         android:textStyle="bold"/>
 
     <Button
