--- a/chat2/app/src/main/res/layout/activity_log_in.xml
+++ b/chat2/app/src/main/res/layout/activity_log_in.xml
@@ -38,7 +38,7 @@
         android:layout_marginRight="20dp"
         android:background="@drawable/edit_background"
         android:hint="password"
-        android:inputType="numberPassword"
+        android:inputType="text|textPassword"
         android:paddingStart="15dp" />
 
     <androidx.appcompat.widget.AppCompatButton
