--- a/chat2/app/src/main/res/layout/activity_home.xml
+++ b/chat2/app/src/main/res/layout/activity_home.xml
@@ -14,7 +14,15 @@
 <!--        app:layout_constraintTop_toTopOf="parent"-->
 <!--        app:layout_constraintBottom_toTopOf="@id/menu_bar"-->
 <!--        tools:ignore="MissingConstraints"/>-->
-
+    <ImageView
+        android:id="@+id/home_logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/calendarView"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/insideout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
     <CalendarView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -23,7 +31,7 @@
         android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
         app:layout_constraintHorizontal_bias="0.488" android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/home_logo"
         tools:ignore="UnknownId" />
 
     <TextView
