--- a/chat2/app/src/main/res/layout/activity_log_in.xml
+++ b/chat2/app/src/main/res/layout/activity_log_in.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="70dp"
-        android:src="@drawable/chat"/>
+        android:src="@drawable/insideout"/>
 
     <EditText
         android:id="@+id/email_edit"
