--- a/chat2/app/src/main/res/layout/activity_home.xml
+++ b/chat2/app/src/main/res/layout/activity_home.xml
@@ -8,63 +8,77 @@
     tools:context=".HomeActivity">
 
 
-<!--    <CalendarView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="0dp"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintBottom_toTopOf="@id/menu_bar"-->
-<!--        tools:ignore="MissingConstraints"/>-->
+    <!--    <CalendarView-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="0dp"-->
+    <!--        app:layout_constraintTop_toTopOf="parent"-->
+    <!--        app:layout_constraintBottom_toTopOf="@id/menu_bar"-->
+    <!--        tools:ignore="MissingConstraints"/>-->
     <ImageView
         android:id="@+id/home_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/calendarView"
-        app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/insideout"
+        app:layout_constraintBottom_toTopOf="@id/calendarView"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <CalendarView
+        android:id="@+id/calendarView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/calendarView"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.488" android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/home_logo"
         tools:ignore="UnknownId" />
 
     <TextView
+        android:id="@+id/YMD_TextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity= "center"
-        android:id="@+id/YMD_TextView" android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/calendarView" app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:gravity="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintEnd_toStartOf="@id/diary_btn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calendarView" />
 
     <TextView
+        android:id="@+id/emotion_TextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity= "center"
-        android:id="@+id/emotion_TextView" android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/YMD_TextView" app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
-
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:gravity="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/YMD_TextView" />
 
 
     <TextView
+        android:id="@+id/surveyscore_TextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity= "center"
-        android:id="@+id/surveyscore_TextView" android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/emotion_TextView" app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:gravity="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emotion_TextView" />
 
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -78,44 +92,54 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="채팅"
+            android:background="@drawable/chat_btn_background"
             android:gravity="center"
-            android:textSize="30dp"
-            android:background="@drawable/chat_btn_background"/>
+            android:text="채팅"
+            android:textSize="30dp" />
+
         <TextView
             android:id="@+id/comunity_btn"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="@drawable/comunity_btn_background"
+            android:gravity="center"
             android:text="커뮤
             니티"
-            android:gravity="center"
-            android:textSize="30dp"
-            android:background="@drawable/comunity_btn_background"/>
+            android:textSize="30dp" />
 
         <TextView
             android:id="@+id/character_btn"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="아바타"
+            android:background="@drawable/avatar_btn_background"
             android:gravity="center"
-            android:textSize="30dp"
-            android:background="@drawable/avatar_btn_background"/>
+            android:text="아바타"
+            android:textSize="30dp" />
 
         <TextView
             android:id="@+id/check_btn"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="검사"
+            android:background="@drawable/check_btn_background"
             android:gravity="center"
-            android:textSize="30dp"
-            android:background="@drawable/check_btn_background"/>
-
-
+            android:text="검사"
+            android:textSize="30dp" />
 
 
     </androidx.appcompat.widget.LinearLayoutCompat>
+
+    <Button
+        android:id="@+id/diary_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="일기"
+        app:layout_constraintBottom_toTopOf="@+id/emotion_TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/YMD_TextView"
+        app:layout_constraintTop_toBottomOf="@+id/calendarView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
