--- a/chat2/app/src/main/res/layout/activity_result.xml
+++ b/chat2/app/src/main/res/layout/activity_result.xml
@@ -33,10 +33,13 @@
         android:textAlignment="center"
         android:textStyle="bold"/>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/reset_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/btn_background"
         android:text="설문 끝내기"
-        android:textSize="20sp"/>
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="15sp"/>
 </LinearLayout>
